force-app/main/default/staticresources/python/Disappear/src/objects/InflightPubsAtGoLive__c.object
<CustomObject>
    <description>List of inflight pub at 1.0 golive
Import data for batch manipulation

should have 32 rows</description>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>InflightPubsAtGoLive</relationshipLabel>
        <relationshipName>InflightPubsAtGoLive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedApprovalDate__c</fullName>
        <formula>Publication__r.PST_Approval_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <label>SiebelRowId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Publication__r.Publication_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>InflightPubsAtGoLive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SiebelRowId__c</columns>
        <columns>Publication__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IFPAGL-{000}</displayFormat>
        <label>InflightPubsAtGoLive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InflightPubsAtGoLive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>